# Vireon-Network-Main

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  MIGRATION_STATUS.md  README.md  clippy.toml  vireon.ps1  vireon.sh
.github/: CUM-FACI-RELEASE.md  README.md  docker-control-plane-images.yml  install-workflows.ps1  install-workflows.sh
.github/workflows/: android-ci.yml  candidate-chain-health.yml  candidate-linux-release.yml  candidate-quality.yml  candidate-vps-release.yml  candidate-windows-release.yml  docker-control-plane-images.yml  explorer-ci.yml  linux-desktop-ci.yml  linux-desktop.yml  release-gate.yml  rust-ci.yml  vps-control-plane-release.yml
.review/pipeline/: AGENTS.md  README.md  STATE_MACHINE.md
configs/: genesis.mainnet-candidate.toml  local.toml  mainnet-candidate.toml  rpc.local.toml  rpc.mainnet-candidate.toml
docs/: DOCUMENTATION_INVENTORY.md  DOCUMENTATION_POLICY.md  README.md  SETUP.md  _404.md  _coverpage.md  _navbar.md  documentation-manifest.json  index.html
docs/api/: 00_RPC_GATEWAY_OVERVIEW.md  01_RPC_ENDPOINTS_DRAFT.md  02_RPC_RESPONSE_MODELS.md  03_MINING_POOL_API_DRAFT.md  04_SDK_CLIENT_V0.md  README.md
docs/architecture/: 00_SYSTEM_OVERVIEW.md  05_WINDOWS_DESKTOP_DIRECTION.md  06_CLIENT_PLATFORM_DIRECTION.md  07_BROWSER_EXTENSION_AND_NATIVE_HOST.md
docs/assets/: docs.css
docs/engineering/: WORKSPACE_AND_LINTS.md
docs/legal/: LICENSING_POLICY.md
docs/migration/: VIREON_BRAND_MIGRATION.md
docs/mining/: CUDA_AND_ASIC_RESISTANCE.md  GPU_MINING.md  README.md
docs/operator/: CHAIN_HEALTH.md  COMMANDS.md  LINUX_DESKTOP.md  LOCAL_RUNBOOK.md  MINING_TROUBLESHOOTING.md  TROUBLESHOOTING.md
docs/protocol/: 00_PROTOCOL_OVERVIEW.md  01_CHAIN_PARAMETERS.md  02_VIRE_UNITS_AND_SUPPLY.md  06_CONSENSUS_POW.md  07_DIFFICULTY_ADJUSTMENT_DRAFT.md  09_ADDRESS_AND_KEYS_DRAFT.md  10_DEVNET_SCOPE.md  12_P2P_NETWORKING_DRAFT.md  12_UPGRADE_ACTIVATION_POLICY.md  13_CHECKPOINT_POLICY.md  13_MINING_POOL_PROTOCOL_DRAFT.md  README.md
docs/release/: GENESIS.md  (+7 more)
scripts/: README.md
shared/: README.md
vireon-android/: README.md  build-native.ps1  build-native.sh  settings.gradle.kts
vireon-benchmarks/: README.md
vireon-browser/: README.md
vireon-browser/host/: Cargo.toml  native-host.chrome.json.example
vireon-browser/host/src/: confirm.rs  keystore.rs  main.rs  protocol.rs
vireon-browser/host/tests/: cli_print_tip.rs  protocol_keystore.rs
vireon-community/: README.md
vireon-contracts/: README.md
vireon-core/: Cargo.toml  README.md  build.rs
vireon-core/native/crypto/progpow/: vireon_firopow_ffi.cpp
vireon-core/src/: address.rs  amount.rs  block.rs  chain.rs  checkpoint.rs  consensus.rs  constants.rs  errors.rs  firopow.rs  genesis.rs  lib.rs  network.rs  pow.rs  protocol.rs  seed.rs  signing.rs  standards.rs  state.rs  transaction.rs  upgrade.rs
vireon-desktop/: Cargo.toml  README.md
vireon-desktop-tauri/: .gitignore  MIGRATION.md  README.md  index.html  package-lock.json  package.json
vireon-desktop-tauri/native/keystore-helper/: Cargo.toml
vireon-desktop-tauri/native/keystore-helper/src/: main.rs  windows_dialog.rs
vireon-desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
vireon-desktop-tauri/src-tauri/capabilities/: default.json
vireon-desktop-tauri/src-tauri/resources/: MANIFEST.json  README.md
vireon-desktop-tauri/src-tauri/src/: commands.rs  error.rs  health.rs  keystore.rs  lib.rs  logs.rs  main.rs  network.rs  notify.rs  process.rs  rpc.rs  settings.rs  updates.rs  workspace.rs
vireon-desktop/installer/: VireonControlCenter.iss
vireon-desktop/src/: app.rs  main.rs  secure.rs  services.rs
vireon-devnet/: README.md
vireon-examples/: README.md  package.json
vireon-explorer/: .env.example  README.md  index.html  package-lock.json  package.json
vireon-faucet/: README.md
vireon-governance/: README.md
vireon-indexer/: Cargo.toml  README.md
vireon-indexer/src/: error.rs  index.rs  main.rs
vireon-indexer/tests/: indexer.rs
vireon-infra/: README.md
vireon-marketplace/: README.md
vireon-miner/: Cargo.toml  README.md  build.rs  config.example.toml
vireon-miner/kernels/: README.md  firopow_cuda.cu
vireon-miner/src/: config.rs  error.rs  main.rs  mining.rs  protocol.rs  source.rs
vireon-miner/src/backends/: cuda.rs  mod.rs  traits.rs
vireon-miner/tests/: miner.rs  pow_parity.rs
vireon-mining-pool/: Cargo.toml  README.md  config.example.toml
vireon-mining-pool/src/: app.rs  config.rs  main.rs  models.rs
vireon-mining-pool/static/: index.html
vireon-mobile-core/: Cargo.toml
vireon-mobile-core/src/: lib.rs
vireon-monitoring/: README.md
vireon-node/: Cargo.toml  README.md
vireon-node/src/: config.rs  dev_helpers.rs  devnet.rs  error.rs  main.rs  mempool.rs  p2p.rs  storage.rs
vireon-node/tests/: devnet.rs
vireon-ops/: README.md
vireon-passport/: README.md
vireon-release/: README.md
vireon-release/vps-control-plane/admin-server/: Cargo.toml
vireon-release/vps-control-plane/admin-server/src/: app.rs  config.rs  main.rs
vireon-release/vps-control-plane/admin-server/static/: app.js  index.html
vireon-research/: README.md
vireon-rpc-gateway/: Cargo.toml  README.md
vireon-rpc-gateway/config/: devnet-rpc.toml
vireon-rpc-gateway/src/: app.rs  config.rs  error.rs  main.rs  models.rs
vireon-rpc-gateway/tests/: rpc.rs
vireon-sdk/: README.md  package-lock.json  package.json
vireon-sdk-rust/: Cargo.toml  README.md
vireon-sdk-rust/docs/: API.md  JS_PARITY.md
vireon-sdk-rust/src/: config.rs  error.rs  lib.rs  maturity.rs
vireon-sdk-rust/src/protocol/: address.rs  amount.rs  constants.rs  errors.rs  mod.rs  network.rs  seed.rs  signing.rs  standards.rs  transaction.rs
vireon-sdk-rust/src/rpc/: client.rs  mod.rs
vireon-sdk-rust/tests/: live_rpc_smoke.rs  rpc_mock.rs
vireon-security/: README.md
vireon-tests/: README.md
vireon-wallet/: Cargo.toml  README.md
vireon-wallet/src/: error.rs  main.rs  rpc.rs  storage.rs  wallet.rs
vireon-website/: .env.example  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json
(+365 files in other folders)
