# Vireon Cargo workspace -- intentionally scoped (see docs/engineering/WORKSPACE_AND_LINTS.md).
#
# Members = Rust crates built/tested together by `cargo test --workspace` and G1 release-gate.
# NOT members (managed separately on purpose):
#   - vireon-explorer, vireon-website  -> Node/Vite frontends (npm)
#   - vireon-desktop-tauri             -> own [workspace] + Tauri toolchain (Control Center)
#   - vireon-android                   -> Gradle/Kotlin + mobile-core FFI
#   - vireon-desktop-tauri/native/keystore-helper -> sidecar with nested [workspace]
#   - docs-only / empty product stubs (sdk, contracts, faucet, ...)
[workspace]
members = [
    "vireon-core",
    "vireon-node",
    "vireon-rpc-gateway",
    "vireon-wallet",
    "vireon-sdk-rust",
    "vireon-browser/host",
    "vireon-indexer",
    "vireon-miner",
    "vireon-mining-pool",
    "vireon-desktop",
    "vireon-mobile-core",
    "vireon-release/vps-control-plane/admin-server",
]
resolver = "2"

# Workspace-wide Clippy defaults for members that opt in with:
#   [lints]
#   workspace = true
# Tests still use expect/unwrap freely; production code should prefer Result + ?.
# Full policy: docs/engineering/WORKSPACE_AND_LINTS.md
[workspace.lints.clippy]
# Keep noise low for legitimate test fixtures; CI release-gate still uses -D warnings
# for correctness lints. unwrap/expect remain "allow" at workspace level so historical
# test modules compile; scanners should filter #[cfg(test)] (see engineering doc).
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
too_many_arguments = "warn"
