[package]
name = "vireon-core"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Vireon core primitives -- FiroPoW 0.9.4 (VireonPoW v1) consensus"
build = "build.rs"

[dependencies]
bech32 = "0.9"
bip39 = { version = "2", features = ["rand"] }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"

[build-dependencies]
cc = "1"
