[package]
name = "vireon-desktop"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Windows 11 desktop wallet and operator prototype for Vireon Network"

[dependencies]
dirs = "6"
qrcode = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
vireon-core = { path = "../vireon-core" }
vireon-wallet = { path = "../vireon-wallet" }
zeroize = "1.8"
webbrowser = "1"

[target.'cfg(target_os = "windows")'.dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
keyring = { version = "3.6", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
keyring = { version = "3.6", default-features = false, features = ["linux-native-sync-persistent"] }
