[package]
name = "vireon-indexer"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Draft local indexer for the Vireon private devnet"

[dependencies]
atomic-write-file = "0.3"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
vireon-core = { path = "../vireon-core" }
vireon-node = { path = "../vireon-node" }

[dev-dependencies]
tempfile = "3"
