[package]
name = "vireon-mining-pool"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Vireon Mainnet Candidate pooled mining coordinator and payout accounting prototype"

[dependencies]
atomic-write-file = "0.3"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "limit"] }
vireon-core = { path = "../vireon-core" }
vireon-miner = { path = "../vireon-miner" }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
