[package]
name = "vireon-mobile-core"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Vireon mobile wallet compatibility bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vireon-core = { path = "../vireon-core" }
zeroize = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
