[package]
name = "vireon-node"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Draft private devnet CLI for Vireon Network"

[dependencies]
atomic-write-file = "0.3"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
fs2 = "0.4"
futures = "0.3"
libp2p = { version = "0.56", features = ["dns", "ed25519", "gossipsub", "identify", "json", "macros", "noise", "ping", "request-response", "serde", "tcp", "tokio", "yamux"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
vireon-core = { path = "../vireon-core" }

[dev-dependencies]
tempfile = "3"
