[package]
name = "vireon-rpc-gateway"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Mainnet Candidate RPC gateway with explicit local and public exposure profiles"

[dependencies]
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
http = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
vireon-core = { path = "../vireon-core" }
vireon-indexer = { path = "../vireon-indexer" }
vireon-node = { path = "../vireon-node" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
vireon-miner = { path = "../vireon-miner" }
