[package]
name = "vireon-wallet"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Draft local devnet wallet CLI for Vireon Network"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
vireon-core = { path = "../vireon-core" }
vireon-node = { path = "../vireon-node" }
vireon-sdk-rust = { path = "../vireon-sdk-rust", features = ["native", "blocking"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3"
