[package]
name = "vireon-browser-host"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Native messaging host for the Vireon browser extension scaffold"
publish = false

[[bin]]
name = "vireon-browser-host"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
dirs = "5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vireon-sdk-rust = { path = "../../vireon-sdk-rust", features = ["native", "blocking"] }
zeroize = "1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
