[package]
name = "vireon-desktop-tauri"
version = "1.0.0"
description = "Vireon Control Center - Tauri desktop shell"
authors = ["Vireon Network <admin@vireon.network>"]
edition = "2021"
publish = false

# Keep this crate outside the monorepo Cargo workspace (Tauri manages its own graph).
[workspace]

[lib]
name = "vireon_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "6"
thiserror = "2"
url = "2"
tokio = { version = "1", features = ["process", "time", "io-util", "rt-multi-thread", "sync", "macros"] }
parking_lot = "0.12"
regex = "1"
open = "5"
sha2 = "0.10"
# Shared protocol client: network defaults + typed RPC for status/account/balance.
# Snapshot still uses ad-hoc GETs for indexer/pool/fleet (not in SDK v0).
vireon-sdk-rust = { path = "../../vireon-sdk-rust", default-features = false, features = ["native"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
